# food-donation-backend

./: .gitignore  CITATION.cff  LICENSE  README.md  docker-compose.yml  package-lock.json  techstack-backend.md
.agent/rules/: security-frontend.md  techstack-backend.md
.agent/skills/brand-identity/: SKILL.md
.agent/skills/brand-identity/resources/: design-tokens.json  voice-tone.md
.github/ISSUE_TEMPLATE/: adoptiomn-report.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/application/: auth_service.py  donation_service.py  dtos.py  request_service.py
backend/app/domain/: donation.py  enums.py  request.py  user.py
backend/app/infrastructure/: database.py  models.py
backend/app/presentation/: dependencies.py
backend/app/presentation/api/v1/: auth_routes.py  donation_routes.py  request_routes.py
backend/tests/integration/: test_api.py  test_news_api.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: http.ts
frontend/src/app/providers/: RootProvider.tsx
frontend/src/components/common/: Navbar.tsx
frontend/src/features/auth/api/: auth.ts
frontend/src/features/auth/hooks/: useAuth.tsx
frontend/src/features/auth/pages/: LoginPage.tsx  RegisterPage.tsx
frontend/src/features/landing/pages/: LandingPage.tsx
specs/: progress.md
specs/features/backend-testing/: plan_TEST-BUG-001.md  tickets.md
specs/features/frontend-init/: tickets.md  user-stories.md
